style.css
/* ... */
.contentIcon svg {
    fill: var(--fg-color);
    /* transition: color 0.5s, fill 0.5s, background-color 0.5s; */
}


.contentIcon:hover{
    transition: transform 0.5s;
    cursor: pointer;
    border: 3px solid var(--bg-color);
    background-color: var(--fg-color);
    color: var(--bg-color);
    
}

.contentIcon:hover svg {
    fill: var(--bg-color);
}



.contentIcon h1{
    margin: 0px;
    transition: transform 0.5s;
}

.programNotes {
    display: block;
    position: absolute;
    top: 90px;
    left: 0;
    width: 100%;
    height: 100%;
    color: var(--fg-color);
    text-align: center;
    scroll-behavior: smooth;
}

.videoWrapper {
    position: relative;
    padding-bottom: 56.25%; /* 16:9 */
    height: 0;
}
.videoWrapper iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
  }

.videoWrapper video {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
  }

.programNotesInner {
    display: block;
    position: relative;
    max-width: 720px;
    margin-left: auto;
    margin-right: auto;
    text-align: left;
}

.schedule {
    vertical-align: center;
    
}

.concertSchedule {
    display: inline-block;
    position: relative;
    /* text-align: center; */
}

select.programSelect {
    display: inline-block;
    position: relative;
    margin-top: 10px;
    padding: 5px;
    width: 90%;
    color: var(--fg-color);
    border: 1px solid var(--fg-color);
    background-color: var(--bg-color);
    font-family: "Roboto Mono", monospace;
    font-weight: 200;
    font-size: 0.8em;
    /* -moz-appearance: none;
	-webkit-appearance: none;
    appearance: none; */
    outline: none;
}

select.programSelect:hover {
    color: var(--bg-color);
    border: 1px solid var(--bg-color);
    background-color: var(--fg-color);
    cursor: pointer;
}

.barnheader img {
    display: block;
    position: relative;
    width: 80%;
    min-width: 300px;
    margin-left: auto;
    margin-right: auto;
    margin-top: 18px;
    vertical-align: top;
    border: 4px solid var(--fg-color);
}

.behindTheScenes img {
    display: inline-block;
    position: relative;
    width: 45%;
    min-width: 300px;
    /* margin-right: 10px; */
    margin-top: 18px;
    vertical-align: top;
    border: 4px solid var(--fg-color);
}


.bio img {
    display: inline-block;
    width: 40%;
    min-width: 300px;
    /* margin-right: 10px; */
    margin-top: 18px;
    vertical-align: top;
    border: 4px solid var(--fg-color);
}

.bio .bioText {
    display: inline-block;
    max-width: 50%;
    vertical-align: top;
}

.bio p {
    font-size: 1em;
    margin: 0px;
}

.canvasParent {
    display: block;
    position: fixed;
    top: 0;
    left: 0;
    z-index: -100;
}

.toggleSection {
    height: 0px;
    overflow: hidden;
}

.endMatter {
    padding-bottom: 40px;
}

::-webkit-scrollbar {
    background-color: var(--bg-color-transparent);
}

/* GROUP-SPECIFIC STYLES */

body#campfire {
    padding-top: 0px;
}

body#starfruit {
    padding-top: 0px;
}

@media only screen and (max-width: 720px){

    .programNotes h1 {
        font-size: 1.5em;
    }
    .programNotes h2 {
        font-size: 1.2em;
    }

    .videoWrapper {
        max-width: 100%;
    }

    .programNotesInner {
        max-width: 95%;
    }

    .behindTheScenes img {
        display: inline-block;
        width: 99%;
        margin-top: 18px;
        vertical-align: top;
    }

    .bio img {
        display: inline-block;
        max-width: 99%;
        margin-top: 18px;
        vertical-align: top;
    }
    
    .bio .bioText {
        display: inline-block;
        max-width: 100%;
        vertical-align: top;
    }

    .layerCaption {
        margin-left: 33.33%;
        width: 66.66%;
    }

    select.programSelect {
        width: 90%;
    }

    form {
        display: block;
        position: relative;
        min-width: 80%;
        max-width: 80%;
        margin-left: auto;
        margin-right: auto;
    }

    table.toggles {
        /* top: 10px;
        left: 5px; */
    }

    table.toggles td{
        /* width: 30px;
        height: 30px;
        padding: 2px; */
    }

    table.paletteToggles {
        bottom: 90px;
        left: -10px;
        height: 50px;
    }

    table.paletteToggles td {
        width: 30px;
        height: 30px;
        padding: 10px;
    }

    .mapContainer .theme {
        
        font-size: 2.5em;
    }

    .mapContainer .palette {
        margin-top: 4px;
        /* font-size: 2em;  */
    }
    

    .mapContainer .layer {
        /* font-size: 0.8em; */
    }

    .mapContainer .layer p {
        /* top: 12%;
        left: 32%; */
    }
}


@keyframes fadeOut {
    0% {top: 0px;}
    100% {top: -100px;}
}

@keyframes fadeIn {
    0% {top: -100px;}
    100% {top: 0px;}
}

